--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,6 @@ header h1{
 .photo{
     width: 400px;
     height: 500px;
-    border: 3px solid seagreen;
     position: relative;
 
 
@@ -76,11 +75,20 @@ header h1{
 
 .photo .para{
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 100px;
+    right: 40px;
     transform: rotate(90deg);
     transform-origin: top right;
  
+}
+.photo_2 .para{
+    top: 180px;
+    right: 40px;
+}
+.para p{
+    font-family: PT Serif;
+    font-size: 12px;
+    text-transform: uppercase;
 }
 
 
