--- a/css/style.css
+++ b/css/style.css
@@ -38,31 +38,26 @@ header h1{
 
 /* start gallary */
 .gallary{
-    padding: 0 240px;
-}
-.gallary_up, .gallary_down{
+    margin-top: 100px;
+    padding: 0 150px;
     display: flex;
-    justify-content: space-between;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
 
-}
-.gallary_up{
-    margin-top: 90px;
-    gap: 10px;
-}
 .photo{
-    width: 400px;
-    height: 500px;
+    width: 350px;
+    height: 450px;
     position: relative;
-
-
-
+    margin-bottom: 40px;
 }
 .photo_2 img{
     margin-top: 80px;
 }
 .photo img{
 
-    width: 80%;
+    width: 250px;
 
 }
 .photo h4{
@@ -76,14 +71,14 @@ header h1{
 .photo .para{
     position: absolute;
     top: 100px;
-    right: 40px;
+    right: 80px;
     transform: rotate(90deg);
     transform-origin: top right;
  
 }
 .photo_2 .para{
     top: 180px;
-    right: 40px;
+
 }
 .para p{
     font-family: PT Serif;
@@ -105,6 +100,35 @@ footer p{
     font-weight: 500;
 }
 
+
+ /* mobile responsive */
+ @media screen and (max-width: 576px){
+
+    header{
+        flex-direction: column;
+        padding-left: 15px;
+        padding-top: 70px;
+    }
+    .title{
+        padding-bottom: 38px;
+    }
+    .info > h2{
+        padding-bottom: 10px;
+    }
+    .gallary{
+        padding: 0;
+        
+    }
+
+    .photo{
+        width: 200px;
+        height: 300px;
+        
+    }
+    .photo img{
+        width: 140px;
+    }
+ }
 
 
 
